Chat model (#7)
* feat: message model

* feat: mapper message

* feat: controller to retrieve request

* feat: repository

* feat: message serviceÃ

* feat(spec): add specification for message

* feat: change message rest import

* feat: add antmatchers for message endpoint
